--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EE88 BETTER</title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="google-site-verification" content="c_OXvGJs8dR-V59Qojo2BC1S7ORHGVR4XqEejANehoA" />
     <style>
         body {
             background-color: #1a1a1a;
