--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>EE88 BETTER</title>
     <link rel="stylesheet" href="styles.css">
     <meta name="google-site-verification" content="c_OXvGJs8dR-V59Qojo2BC1S7ORHGVR4XqEejANehoA" />
+    <meta name="description" content="Sòng bạc trực tuyến tốt nhất tại Việt Nam - nhiều trò chơi, khuyến mãi hấp dẫn, nạp tiền nhanh chóng.">
+    <meta name="keywords" content="casino, trực tuyến, cá cược, khuyến mãi, nạp tiền, rút tiền, sòng bạc, game online">
+    <meta name="author" content="EE88 BETTER">
+
     <style>
         body {
             background-color: #1a1a1a;
