--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
-<!<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EE88 BETTER</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>EE88 BETTER - Casino Trực Tuyến Uy Tín tại Việt Nam</title>
+    <meta name="description" content="Sòng bạc trực tuyến hàng đầu tại Việt Nam với nhiều trò chơi và khuyến mãi hấp dẫn. Đăng ký ngay để nhận thưởng!">
+    <meta name="keywords" content="casino trực tuyến, cá cược, trò chơi casino, máy đánh bạc, khuyến mãi, nạp tiền, rút tiền, sòng bạc uy tín">
     <meta name="google-site-verification" content="c_OXvGJs8dR-V59Qojo2BC1S7ORHGVR4XqEejANehoA" />
-    <meta name="description" content="Sòng bạc trực tuyến tốt nhất tại Việt Nam - nhiều trò chơi, khuyến mãi hấp dẫn, nạp tiền nhanh chóng.">
-    <meta name="keywords" content="casino, trực tuyến, cá cược, khuyến mãi, nạp tiền, rút tiền, sòng bạc, game online">
-    <meta name="author" content="EE88 BETTER">
-
+    <link rel="stylesheet" href="styles.css">
     <style>
         body {
             background-color: #1a1a1a;
@@ -92,81 +90,61 @@
     </style>
 </head>
 <body>
-
     <header>
         <nav>
             <ul>
                 <li><a href="#">Trang Chủ</a></li>
-                <li><a href="#casino">Casino</a></li>
-                <li><a href="#bonus">Khuyến Mãi</a></li>
-                <li><a href="#payments">Thanh Toán</a></li>
-                <li><a href="#about">Về Chúng Tôi</a></li>
-                <li><a href="#contacts">Liên Hệ</a></li>
+                <li><a href="#casino">Trò Chơi Casino</a></li>
+                <li><a href="#bonus">Khuyến Mãi Đặc Biệt</a></li>
+                <li><a href="#payments">Phương Thức Thanh Toán</a></li>
+                <li><a href="#about">Thông Tin Về Chúng Tôi</a></li>
+                <li><a href="#contacts">Liên Hệ Hỗ Trợ</a></li>
             </ul>
         </nav>
-        <div class="search-bar">
-            <input type="text" placeholder="Tìm kiếm...">
-            <button>Tìm</button>
-        </div>
-        <div class="auth-buttons">
-            <button>Đăng Nhập</button>
-            <button>Đăng Ký</button>
-        </div>
     </header>
     <main>
         <section id="casino">
-            <h2>Casino</h2>
+            <h1>Chơi Casino Trực Tuyến - Trải Nghiệm Game Hấp Dẫn</h1>
             <div class="game-container">
-                <div class="game">🎰 Máy đánh bạc  </div>
-                <div class="game">🎲 Xúc xắc</div>
-                <div class="game">🃏  Lá bài Joker </div>
-                <div class="game-alt">🎮 Tay cầm chơi game</div>
-                <div class="game-alt">🀄 Mạt chược (Rồng đỏ)</div>
-                <div class="game-alt">🎯 Phi tiêu</div>
+                <div class="game">🎰 <strong>Máy Đánh Bạc</strong></div>
+                <div class="game">🎲 <strong>Trò Chơi Xúc Xắc</strong></div>
+                <div class="game">🃏 <strong>Bài Joker - Cơ Hội Thắng Lớn</strong></div>
+                <div class="game-alt">🎮 <strong>Tay Cầm Chơi Game</strong></div>
+                <div class="game-alt">🀄 <strong>Mạt Chược (Rồng Đỏ)</strong></div>
+                <div class="game-alt">🎯 <strong>Trò Chơi Phi Tiêu</strong></div>
             </div>
         </section>
         <section id="bonus">
-            <h2>Khuyến Mãi</h2>
+            <h2>Khuyến Mãi Hấp Dẫn Cho Người Chơi</h2>
             <ul>
-                <li>Thưởng Chào Mừng</li>
-                <li>Hoàn Tiền</li>
-                <li>Vòng Quay Miễn Phí</li>
-                <li>Chương Trình VIP</li>
+                <li>🎁 <strong>Thưởng Chào Mừng 100%</strong></li>
+                <li>💰 <strong>Hoàn Tiền Mỗi Ngày</strong></li>
+                <li>🎡 <strong>Vòng Quay Miễn Phí</strong></li>
+                <li>👑 <strong>Chương Trình VIP Độc Quyền</strong></li>
             </ul>
         </section>
         <section id="payments" class="payment-section">
-            <h2>Thanh Toán</h2>
+            <h2>Hệ Thống Thanh Toán Bảo Mật</h2>
             <ul>
-                <li>Nạp Tiền</li>
-                <li>Rút Tiền</li>
-                <li>Thanh Toán Bằng Tiền Điện Tử</li>
+                <li>💳 <strong>Nạp Tiền Nhanh Chóng</strong></li>
+                <li>🏦 <strong>Rút Tiền An Toàn</strong></li>
+                <li>₿ <strong>Chấp Nhận Thanh Toán Tiền Điện Tử</strong></li>
             </ul>
-            <button style="background-color: #ffcc00; padding: 10px; border: none; border-radius: 5px; cursor: pointer;">Thực Hiện Thanh Toán</button>
         </section>
         <section id="about">
             <h2>Về Chúng Tôi</h2>
-            <p>Chào mừng bạn đến với sòng bạc trực tuyến hàng đầu, nơi cung cấp trải nghiệm chơi game đỉnh cao.</p>
+            <p>EE88 là sòng bạc trực tuyến uy tín, cung cấp nhiều trò chơi hấp dẫn và dịch vụ chuyên nghiệp tại Việt Nam.</p>
         </section>
         <section id="contacts">
-            <h2>Liên Hệ</h2>
-            <p>Email: support@55ee02clone.com</p>
+            <h2>Liên Hệ Hỗ Trợ Khách Hàng</h2>
+            <p>Email: <a href="mailto:support@betvn.us">support@betvn.us</a></p>
             <p>Điện thoại: +84 123 456 789</p>
             <p>Địa chỉ: Hồ Chí Minh, Việt Nam</p>
         </section>
     </main>
-    <div class="chat-support">💬</div>
     <footer>
-        <p>&copy; 2025 55EE02 Clone. Tất cả các quyền được bảo lưu.</p>
+        <p>&copy; 2025 EE88 BETTER - Casino Trực Tuyến Uy Tín tại Việt Nam. Tất cả các quyền được bảo lưu.</p>
     </footer>
-    <script>
-        function searchFunction() {
-            let query = document.getElementById("searchInput").value;
-            alert("Bạn đã tìm kiếm: " + query);
-        }
-        function toggleChat() {
-            let chatBox = document.getElementById("chatModal");
-            chatBox.style.display = chatBox.style.display === "none" ? "block" : "none";
-        }
-    </script>
 </body>
 </html>
+
