--- a/index.html
+++ b/index.html
@@ -143,7 +143,13 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 EE88 BETTER - Casino Trực Tuyến Uy Tín tại Việt Nam. Tất cả các quyền được bảo lưu.</p>
+        <p>&copy; 2025 EE88 BETTER - Casino Trực Tuyến Uy Tín tại Việt Nam. Tất cả các quyền được bảo lưu.
+        <p>&copy; 2025 EE88 BETTER. Tất cả các quyền được bảo lưu.</p>
+        <p>Theo dõi chúng tôi: 
+        <a href="https://facebook.com/ee88bet" target="_blank">Facebook</a> | 
+        <a href="https://twitter.com/ee88bet" target="_blank">Twitter</a> | 
+        <a href="https://t.me/ee88bet" target="_blank">Telegram</a>
+    </p>
     </footer>
 </body>
 </html>
